[DG] fixed grey background spacing

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -27,10 +27,6 @@
 
 body {
     font-family: $main-font;
-    h1, h2, h3, h4, p{
-        padding:0;
-        margin:0;
-    }
 }
 
 .white{
